@@ -40,6 +40,7 @@ fixed bugs:
 - ensure consistency of LP bounds during OBBT diving, i.e., that lower <= upper holds exactly
 - fixed numerical bug in conflict analysis of genvbounds propagator
 - relaxed assert in SCIPvarCh{Lb,Ub}{Global,Local} that new bound must be tighter to feastol
+- fixed bug in heur_subnlp running with tightened tolerances: sumepsilon must be tightened like feastol and epsilon
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
